fix: :lipstick: wrap code snippet tabs on smaller screens (#6)

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -27,6 +27,7 @@
 
 .api-code-tab-group {
   display: flex;
+  flex-wrap: wrap;
 }
 
 .api-code-tab { 
